<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bga"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/type"
            android:contentDescription="TODO" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/main_btn1"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="150dp"
                android:background="@drawable/main_btn2"
                android:text="@string/startgame"
                android:textSize="20sp"
                android:id="@+id/start_game"
                android:layout_margin="1dp"
                android:textColor="#FFF"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:background="@drawable/main_btn1"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="150dp"
                android:background="@drawable/main_btn2"
                android:text="@string/about"
                android:layout_margin="1dp"
                android:id="@+id/about"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:background="@drawable/main_btn1"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
            <Button
                    android:layout_width="150dp"
                    android:background="@drawable/main_btn2"
                    android:text="@string/help"
                    android:layout_margin="1dp"
                    android:id="@+id/help"
                    android:textSize="20sp"
                    android:textColor="#FFF"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>